--- a/.env.example
+++ b/.env.example
@@ -2,17 +2,16 @@
 # Copy this file to .env.local and update with your values
 
 # Database
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="postgresql://username:password@localhost:5432/media_platform?schema=public"
 
 # Authentication
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="your-secret-key-here"
 
-# OAuth Providers (optional)
-# GITHUB_ID="your-github-client-id"
-# GITHUB_SECRET="your-github-client-secret"
-# GOOGLE_CLIENT_ID="your-google-client-id"
-# GOOGLE_CLIENT_SECRET="your-google-client-secret"
+# Claude API
+ANTHROPIC_API_KEY="your-anthropic-api-key-here"
 
-# API Keys
-# API_KEY="your-api-key-here"
+# File Upload
+MAX_FILE_SIZE=26214400
+MAX_FILES_PER_BATCH=50
+UPLOAD_DIR="./public/uploads"
