--- a/package.json
+++ b/package.json
@@ -25,78 +25,77 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "next": "^15.0.0",
-    "react": "^18.0.0", 
-    "react-dom": "^18.0.0",
-    "clsx": "^2.0.0",
-    "lucide-react": "^0.400.0",
-    
-    "react-hook-form": "^7.52.0",
-    "zod": "^3.23.0",
+    "@anthropic-ai/sdk": "^0.65.0",
+    "@auth/prisma-adapter": "^2.7.2",
     "@hookform/resolvers": "^3.9.0",
-    
-    "class-variance-authority": "^0.7.1",
-    "tailwind-merge": "^2.5.4",
-    "@radix-ui/react-slot": "^1.1.2",
-    
+    "@prisma/client": "^5.20.0",
+    "@radix-ui/react-checkbox": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.0",
     "@radix-ui/react-select": "^2.1.0",
-    "@radix-ui/react-toast": "^1.2.0",
-    "@radix-ui/react-checkbox": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
-    "@radix-ui/react-popover": "^1.1.0",
-    
+    "@radix-ui/react-toast": "^1.2.0",
+    "@t3-oss/env-nextjs": "^0.11.0",
     "@tanstack/react-query": "^5.51.0",
     "@tanstack/react-query-devtools": "^5.51.0",
-    "zustand": "^4.5.0",
-    
-    "date-fns": "^3.6.0",
-    "framer-motion": "^11.3.0",
-    "react-hot-toast": "^2.4.0",
-    "sonner": "^1.5.0",
-    
     "axios": "^1.7.0",
+    "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.0.0",
+    "date-fns": "^3.6.0",
+    "formidable": "^3.5.4",
+    "framer-motion": "^11.3.0",
+    "lucide-react": "^0.400.0",
     "nanoid": "^5.0.0",
-    
+    "next": "^15.0.0",
     "next-auth": "5.0.0-beta.29",
-    "@prisma/client": "^5.20.0",
-    "@auth/prisma-adapter": "^2.7.2",
+    "next-seo": "^6.6.0",
     "next-themes": "^0.4.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-dropzone": "^14.2.0",
-    "@t3-oss/env-nextjs": "^0.11.0",
-    "next-seo": "^6.6.0"
+    "react-hook-form": "^7.52.0",
+    "react-hot-toast": "^2.4.0",
+    "sharp": "^0.34.4",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.5.4",
+    "zod": "^3.23.0",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.15.0",
+    "@next/bundle-analyzer": "^15.0.0",
+    "@testing-library/jest-dom": "^6.4.0",
+    "@testing-library/react": "^15.0.0",
+    "@testing-library/user-event": "^14.5.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/formidable": "^3.4.6",
     "@types/node": "^22.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.0",
+    "@typescript-eslint/eslint-plugin": "^8.17.0",
+    "@typescript-eslint/parser": "^8.17.0",
+    "@vitejs/plugin-react": "^4.3.0",
     "autoprefixer": "^10.4.0",
+    "cross-env": "^7.0.3",
     "eslint": "^9.15.0",
     "eslint-config-next": "^15.0.0",
-    "@eslint/js": "^9.15.0",
-    "@eslint/eslintrc": "^3.2.0",
-    "@typescript-eslint/parser": "^8.17.0",
-    "@typescript-eslint/eslint-plugin": "^8.17.0",
+    "glob": "^11.0.0",
+    "husky": "^9.1.0",
+    "jsdom": "^24.1.0",
+    "lint-staged": "^15.2.0",
+    "postcss": "^8.4.0",
     "prettier": "^3.3.0",
     "prettier-plugin-tailwindcss": "^0.6.0",
-    "vitest": "^3.2.4",
-    "@vitejs/plugin-react": "^4.3.0",
-    "@testing-library/react": "^15.0.0",
-    "@testing-library/jest-dom": "^6.4.0",
-    "@testing-library/user-event": "^14.5.0",
-    "jsdom": "^24.1.0",
-    "husky": "^9.1.0",
-    "lint-staged": "^15.2.0",
-    "@next/bundle-analyzer": "^15.0.0",
-    "cross-env": "^7.0.3",
     "prisma": "^5.20.0",
-    "glob": "^11.0.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.0.0",
+    "vitest": "^3.2.4"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
