Configure dev server to use port 3008

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "dev:turbo": "next dev --turbo",
+    "dev": "next dev -p 3008",
+    "dev:turbo": "next dev --turbo -p 3008",
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
